# chikapi

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yml
app/: .env  .eslintrc.json  .prettierrc.json  package-lock.json  package.json  tsconfig.json
app/src/: _app.html
app/src/components/: divider.tsx  loader.tsx  navigation.tsx  object.tsx  sidebar.tsx  toast.tsx
app/src/components/form/: keyfield.tsx  rmadd.tsx
app/src/components/simple/: bool.tsx  null.tsx  number.tsx  quest.tsx
app/src/components/table/: index.tsx
app/src/hooks/: index.ts
app/src/layout/: base.tsx
app/src/pages/: _app.tsx  _root.tsx  add_read_model.tsx  index.tsx  not_found.tsx  read_model.tsx
app/src/services/: globals.ts  index.ts  read_models.ts  result.ts  settings.ts  types.ts  utils.ts
app/src/services/mutations/: add_rm.ts
app/src/styles/: globals.scss
backend/: Cargo.toml  chikapi.ts
backend/src/: main.rs
backend/src/schema/: mod.rs
data/: animals.json  drum-school.json  json-placeholder.json  schema.json
src/: errors.rs  main.rs  utils.rs
src/api/: common.rs  get_schema.rs  mod.rs  read_model.rs  response.rs
src/api/read_model/: endpoints.rs  methods.rs  mod.rs  types.rs
src/core/: mod.rs  schema.rs
src/schema/: chikapi.rs
webapp/: .prettierrc.json  package-lock.json  package.json  tsconfig.json
webapp/src/: _app.html
webapp/src/components/: sidebar.tsx
webapp/src/layout/: base.tsx
webapp/src/pages/: _app.tsx  index.tsx
webapp/src/styles/: globals.scss
