[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.0"
actix-files = "0.6.2"
env_logger = "0.9.1"
ts-rs = "6.1"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0.83"
serde_with = "2.0.0"
typester = "0.1.1"

[dev-dependencies]
cargo-watch = "8.1.2"